--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <div class="principale">
         <div class="logo">
             <a href="#">
-                <img src="./Image1/Yulendo.PNG"  style="height: 67px;">
+                <img src="./Yulendo.PNG"  style="height: 67px;">
               </a>
 
         </div>
@@ -26,7 +26,7 @@
                 <a href="./blog.html">Blog</a>
             </li>
             <li>
-                <a href="./PDF/A_propos_de_nous">A propos de nous</a>
+                <a href="./Afiche_Yulando.pdf">A propos de nous</a>
             </li>
             <li>
                 <a href="./contact.html">Contact</a>
