--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
         </ul>
     </div>
     <div class="titre">
-        <h1>SERVICE</h1>
+        <h1>SERVICE WEB</h1>
     </div>
     <div class="bouton">
         <a href="#" class="btn" id="chatbot-button">CHATBOT</a>
