--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </ul>
     </div>
     <div class="titre">
-        <h1>BIENVENUE</h1>
+        <h1>CONTACT</h1>
     </div>
     <div class="bouton">
         <a href="#" class="btn" id="chatbot-button">CHATBOT</a>
